--- a/src/pages/projects/fractal-trees.mdx
+++ b/src/pages/projects/fractal-trees.mdx
@@ -1,3 +1,33 @@
+import Head from "next/head";
+import FractalTreeCanvas from "../../../components/fractal-trees";
+
+<Head>
+  <title>Fractal Trees | Sergen Karaoglan</title>
+  <meta
+    name="description"
+    content="Build fractal trees with a interactive 3D fractal tree generator."
+  />
+</Head>
+
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github.min.css"
+  integrity="sha512-0aPQyyeZrWj9sCA46UlmWgKOP0mUipLQ6OZXu8l4IcAmD2u31EPEy9VcIMvl7SoAaKe8bLXZhYoMaE/in+gcgA=="
+  crossOrigin="anonymous"
+  referrerPolicy="no-referrer"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css"
+  integrity="sha384-RZU/ijkSsFbcmivfdRBQDtwuwVqK7GMOw6IMvKyeWL2K5UAlyp6WonmB8m7Jd0Hn"
+  crossOrigin="anonymous"
+/>
+
+<div className="m-auto w-96 h-96">
+  <FractalTreeCanvas is3D={false} initDepth={5} />
+</div>
+
+<article className="prose lg:prose-xl m-auto w-7/12 pt-16">
 March 19th 2023
 
 # Fractal Trees
@@ -42,3 +72,5 @@ Source code
 
 https://en.wikipedia.org/wiki/Fractal_canopy
 https://en.wikipedia.org/wiki/Fractal
+
+</article>
