--- a/src/pages/about-me.mdx
+++ b/src/pages/about-me.mdx
@@ -8,10 +8,12 @@ import Head from "next/head";
 <article className="prose lg:prose-xl m-auto pt-16">
 ## About me
 
-While studying AI and pursuing a masters degree I have found my biggest interest to be in bringing interactive experinces to the browser. The first project I built for the web that I had set for myself was creating an interface to train a neural network for the ability to play Chrome's T-Rex Runner with a webcam, which can still be found. I did this to learn about deep learning and computer vision and found to be greatly interested in AI enough to persue a masters degree on the topic. But being able to deploy the project seamlessly for anyone to use on countless devices with nothing but a browser and a connection felt powerful enough to not forget the experience even while pursuing a masters degree. The project also exposed how rich the JavaScript ecosystem has become and how much browsers have evolved. A great example is the [Godot game editor](https://editor.godotengine.org/releases/latest/) which allows anyone to create a 3D/2D game with nothing but a browser.
+While studying artificial intelligence and pursuing a masters degree I have found my biggest interest to be in bringing interactive experiences to the browser. The first project I built for the web that I had set for myself was creating an interface to train a neural network for the ability to play Chrome's T-Rex Runner with a webcam (which can still be found though lacking my current standards). I did this to learn about deep learning and computer vision and saw the potential in AI enough to pursue a masters degree on the topic. But being able to deploy the project seamlessly for anyone to use on countless devices with nothing but a browser and a connection felt powerful enough to not forget the experience even while pursuing a masters degree. The project also exposed how rich the JavaScript ecosystem has become and how much browsers have evolved. A great example of this is the online [Godot game editor](https://editor.godotengine.org/releases/latest/) which allows anyone to create a 3D/2D game which can be easy to take for granted.
 
-That's not to say I have lost interest in AI or other topics, quite the opposite. More of my free time than I would like to admit is spent learning various topics by reading blog posts and watching creators on YouTube both large and small. My curosity along with the many great content creators is also what leads to this website where I decided to embark on creating my own blog-style posts with interactive elements to teach topics both at a practical and theoretical level that I am interested in and would like to learn more myself or topics I find profound enough to simply want to share. This can range from procedural generation to computer graphics.
+That's not to say I have lost interest in AI or other topics, quite the opposite. More of my free time than I would like to admit is spent satisfying my curiosity on various topics by reading blog posts and watching creators on YouTube both large and small ranging from podcasts to animated videos. All the above is what leads to this website where I decided to embark on creating my own blog-style posts with interactive elements to showcase topics I would like to learn more of or topics I find profound enough to simply want to share both at a practical and theoretical level. This can range from procedural generation to computer graphics.
 
-I am currently trying out a tech stack that fits my needs consisting of Next.js, Tailwind, Typescript and React Three Fiber and so far it has been a great joy. There also seems to be a free open source package for almost anything you may want. This page was written in Markdown in combination with JSX components for example. So with all that being said I hope to continue developing interactive experiences for the web both for entertainment and educational purposes that can benefit both me and any visitors.
+Currently trying out a tech stack that fits my needs consisting of Next.js, Tailwind, Typescript and React Three Fiber and so far it has been a great joy. There also seems to be a free open source package for almost anything you may want. This page was written in Markdown in combination with JSX components for example. So with all that being said I hope to be exploring various topics and developing interactive experiences for the web both for entertainment and educational purposes that can benefit myself and visitors. Feel free to have a look and let me know what you think.
+
+Sergen Karaoglan.
 
 </article>
