--- a/src/pages/projects/fractal-trees.mdx
+++ b/src/pages/projects/fractal-trees.mdx
@@ -17,11 +17,11 @@ import RotationCanvas from "../../../components/rotation-points";
   crossOrigin="anonymous"
   referrerPolicy="no-referrer"
 />
-<link
+<!-- <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css"
   crossOrigin="anonymous"
-/>
+/> -->
 
 <article className="max-sm:mx-4 prose lg:prose-xl m-auto pt-16">
 March 23rd 2023
