project list update

--- a/src/pages/projects/fractal-trees.mdx
+++ b/src/pages/projects/fractal-trees.mdx
@@ -33,7 +33,7 @@ Below is a fractal tree that is intentionally left with only the first [mesh](ht
   <FractalTreeCanvas initDepth={1} showDepth={true} />
 </div>
 
-A convenient property of procedurally generated art is that you can tweak the parameters to customise the appearance with ease. The recursive depth here is limited at 10 but you can edit the code to go as far as your hardware can handle. Another property is the angle. Each branch (cylinders) splits at a fixed angle from the previous branch.
+A convenient property of procedurally generated art is that you can tweak the parameters to customise the appearance with ease. The recursive depth here is limited at 10 but you can edit the code to go as far as your hardware can handle. Another property is the angle. Each branch (cylinder) splits at a fixed angle from the previous branch.
 Try the slider below to see how the angle changes the appearance of our fractal tree.
 
 <div className="m-auto sm:w-96 sm:h-96 py-10">
