--- a/src/pages/about-me.mdx
+++ b/src/pages/about-me.mdx
@@ -5,7 +5,7 @@ import Head from "next/head";
   <meta name="description" content="About Sergen Karaoglan" />
 </Head>
 
-<article className="prose lg:prose-xl m-auto pt-16">
+<article className="max-sm:mx-4 prose lg:prose-xl m-auto pt-16">
 ## About me
 
 While studying artificial intelligence and pursuing a masters degree I have found my biggest interest to be in bringing interactive experiences to the browser. The first project I built for the web that I had set for myself was creating an interface to train a neural network for the ability to play Chrome's T-Rex Runner with a webcam (which can still be found though lacking my current standards). I did this to learn about deep learning and computer vision and saw the potential in AI enough to pursue a masters degree on the topic. But being able to deploy the project seamlessly for anyone to use on countless devices with nothing but a browser and a connection felt powerful enough to not forget the experience even while pursuing a masters degree. The project also exposed how rich the JavaScript ecosystem has become and how much browsers have evolved. A great example of this is the online [Godot game editor](https://editor.godotengine.org/releases/latest/) which allows anyone with a browser to create a 3D/2D game which can be easy to take for granted.
