add dungeon texture

--- a/src/pages/about-me.mdx
+++ b/src/pages/about-me.mdx
@@ -14,6 +14,6 @@ That's not to say I have lost interest in AI or other topics, quite the opposite
 
 Currently trying out a tech stack that fits my needs consisting of Next.js, Tailwind, Typescript and React Three Fiber and so far it has been a great joy. So with all that being said I hope to be exploring various topics and developing interactive experiences for the web both for entertainment and educational purposes that can be of benefit to myself and visitors. Feel free to have a look and let me know what you think.
 
-Sergen Karaoglan.
+Sergen.
 
 </article>
