--- a/src/pages/fractal-trees.mdx
+++ b/src/pages/fractal-trees.mdx
@@ -1,20 +1,13 @@
 ---
-layout:  ../layouts/home-layout.astro
-title: Fractal Trees | Sergen Karaoglan
-description: Build fractal trees with a interactive 3D fractal tree generator.
 ---
+
+import Layout from "../layouts/home-layout.astro";
 import FractalTreeCanvas from "../components/fractal-tree";
 import RotationCanvas from "../components/rotation-points";
 
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark.min.css"
-  integrity="sha512-rO+olRTkcf304DQBxSWxln8JXCzTHlKnIdnMUwYvQa9/Jd4cQaNkItIUj6Z4nvW1dqK0SKXLbn9h4KwZTNtAyw=="
-  crossOrigin="anonymous"
-  referrerPolicy="no-referrer"
-/>
+<Layout title="Fractal Trees | Sergen Karaoglan" description="Build fractal trees with a interactive 3D fractal tree generator.">
 
-<article className="max-sm:mx-4 prose lg:prose-xl m-auto pt-16 ">
+<article className="max-sm:mx-4 prose lg:prose-xl m-auto pt-16">
 March 23rd 2023
 
 # Fractal Trees
@@ -148,3 +141,4 @@ You now know what a Fractal Tree is and saw how to build one in R3F. Procedural 
 [Source code](https://github.com/SergenKaraoglan/sergen-karaoglan-portfolio/blob/main/components/fractal-tree.jsx)
 
 </article>
+</Layout>
