add project list

--- a/src/pages/fractal-trees.mdx
+++ b/src/pages/fractal-trees.mdx
@@ -140,5 +140,9 @@ You now know what a Fractal Tree is and saw how to build one in R3F. Procedural 
 
 [Source code](https://github.com/SergenKaraoglan/sergen-karaoglan-portfolio/blob/main/components/fractal-tree.jsx)
 
+## Resources
+[Coding Train](https://www.youtube.com/watch?v=0jjeOYMjmDU)
+
+[modernescartes](https://www.moderndescartes.com/essays/plants/)
 </article>
 </Layout>
