--- a/src/pages/projects/fractal-trees.mdx
+++ b/src/pages/projects/fractal-trees.mdx
@@ -1,9 +1,9 @@
 ---
 ---
 
-import Layout from "../layouts/home-layout.astro";
-import FractalTreeCanvas from "../components/fractal-tree";
-import RotationCanvas from "../components/rotation-points";
+import Layout from "../../layouts/home-layout.astro";
+import FractalTreeCanvas from "../../components/fractal-tree";
+import RotationCanvas from "../../components/rotation-points";
 
 <Layout title="Fractal Trees | Sergen Karaoglan" description="Build fractal trees with a interactive 3D fractal tree generator.">
 
