switch from npm to pnpm

--- a/src/pages/projects/Intro-3D-Math.mdx
+++ b/src/pages/projects/Intro-3D-Math.mdx
@@ -8,6 +8,6 @@ import TwoD from "../../components/2D.astro";
 <Layout title="3D Math Intro | Sergen Karaoglan" description="Learn about 3D mathematics with animations and interactive examples">
 
 <OneD client:load/>
-<TwoD client:load/>
+<TwoD />
 
 </Layout>
