DOM tree visualiser start

--- a/src/pages/projects/fractal-trees.mdx
+++ b/src/pages/projects/fractal-trees.mdx
@@ -7,7 +7,7 @@ import RotationCanvas from "../../components/rotation-points";
 
 <Layout title="Fractal Trees | Sergen Karaoglan" description="Build fractal trees with a interactive 3D fractal tree generator.">
 
-<article className="max-sm:mx-4 prose lg:prose-xl m-auto pt-16">
+<article class="max-sm:mx-4 prose lg:prose-xl m-auto pt-16">
 March 23rd 2023
 
 # Fractal Trees
@@ -141,8 +141,10 @@ You now know what a Fractal Tree is and saw how to build one in R3F. Procedural 
 [Source code](https://github.com/SergenKaraoglan/sergen-karaoglan-portfolio/blob/main/components/fractal-tree.jsx)
 
 ## Resources
+[Wikipedia](https://en.wikipedia.org/wiki/Fractal_canopy)
+
 [Coding Train](https://www.youtube.com/watch?v=0jjeOYMjmDU)
 
-[modernescartes](https://www.moderndescartes.com/essays/plants/)
+[Modernescartes](https://www.moderndescartes.com/essays/plants/)
 </article>
 </Layout>
